# OSTBoardFirmware

./: .directory  .gitignore  .gitmodules  CMakeLists.txt
Firmware/: main.cpp
Firmware/libs/: asf.h
bootloader/: CMakeLists.txt  bootloader_readme.md  main.c  main.h  samd21_sam_ba.dep  samd21_sam_ba.ewd  samd21_sam_ba.ewp  samd21_sam_ba.ewt  startup_samd21.c
bootloader/drivers/: cdc_enumerate.c  usb.h
bootloader/outputs/: OSTBootloaderV1.hex  OSTBootloaderV1.out
bootloader/settings/: samd21_sam_ba.Debug.cspy.bat  samd21_sam_ba.Debug.cspy.ps1  samd21_sam_ba.Debug.driver.xcl  samd21_sam_ba.Debug.general.xcl  samd21_sam_ba.dbgdt  samd21_sam_ba.dnx  samd21_sam_ba.wsdt
firmware/: CMakeLists.txt  main.h  main1.cpp  startup_samd21.c  version.h
firmware/asf/common/boards/: board.h
firmware/asf/common/services/usb/class/cdc/device/: udi_cdc.c
firmware/asf/sam0/drivers/nvm/: nvm.c
firmware/asf/sam0/drivers/system/clock/clock_samd21_r21_da/: clock.c
firmware/libs/DS3232SN/: DS3232SN.cpp  DS3232SN.h
firmware/libs/TimerDescriptionLanguage/: TdlAction.cpp  TdlAction.h  TdlActivator.cpp  TdlActivator.h  TdlActivatorState.h  TdlChannel.cpp  TdlChannel.h  TdlChannelState.h  TdlChannels.cpp  TdlChannels.h  TdlEvent.cpp  TdlEvent.h  TdlEvents.cpp  TdlEvents.h  TdlRule.cpp  TdlRule.h  TdlRuleRunner.cpp  TdlRuleRunner.h  TdlRules.cpp  TdlRules.h
firmware/libs/conf/: conf_board.h  conf_clocks.h  conf_usb.h
firmware/libs/config_comms/: rule_writer.cpp  ruler_writer.h
firmware/libs/datetime/: DateTime.cpp  DateTime.h  Interval.h  Period.cpp  Period.h  PeriodField.h  PeriodInterval.cpp  PeriodInterval.h
firmware/libs/eeprom/: XmegaEepromDriver.cpp  XmegaEepromDriver.h  avr_compiler.h  eeprom_driver.c
firmware/libs/exception/: CException.c  CException.h  ExceptionValues.h
firmware/libs/hal/: I2c.cpp  I2c.h  Pin.cpp  Pin.h  i2c.h
firmware/libs/helpers/: compile_time_sizeof.h
firmware/libs/memory/: CppNewDeleteOps.cpp  CppNewDeleteOps.h  MemoryWrapper.c  MemoryWrapper.h
firmware/libs/min/: layer1.c  layer2.c  layer2.h  layer2_helper.c  layer2_helper.h  min.h  min_received_cmds.cpp  min_received_cmds.h  min_transmit_cmds.cpp  min_transmit_cmds.h
firmware/libs/nvm/: NvmDriverInterface.h  NvmRuleLoader.cpp  NvmRuleLoader.h  NvmRuleManager.cpp  NvmRuleManager.h  SamdEmulatedEepromDriver.cpp  SamdEmulatedEepromDriver.h
firmware/libs/serial/: usb_serial.c  usb_serial.h
firmware/libs/simplib/: array.cpp  array.h
firmware/libs/time/: CMakeLists.txt  asc_store.c  asctime.c  asctime_r.c  ctime.c  ctime_r.c  daylight_seconds.c  difftime.c  dst_pointer.c  equation_of_time.c  fatfs_time.c  gm_sidereal.c  gmtime.c  gmtime_r.c  isLeap.c  iso_week_date.c  iso_week_date_r.c  isotime.c  isotime_r.c  lm_sidereal.c  localtime.c  localtime_r.c  mk_gmtime.c  mktime.c  month_length.c  moon_phase.c  set_dst.c  set_position.c  set_system_time.c  set_zone.c  solar_declination.c  solar_noon.c  strftime.c  sun_rise.c  sun_set.c  system_time.c  time.c  time_avr.h  tm_store.c  week_of_month.c  (+1 more)
firmware/libs/time_tick/: time_tick.h  time_tick_sam.c
firmware/libs/usb/: usb_handlers.cpp  usb_handlers.h
firmware/linker/: samd21e18a_flash.ld
firmware/tests/: CMakeLists.txt  DS3232SN_tests.cpp  mem_tests.cpp  nvm_tests.cpp  rule_runner_tests.cpp  tests.h  tests_main.cpp
firmware/tests/libs/cmocka/: cmocka.c  cmocka.h  cmocka_private.h
firmware/tests/libs/cmocka-1.1.1/include/: cmocka.h
firmware/tests/libs/cmocka-1.1.1/src/: cmocka.c
firmware/tests/libs/stdio/stdio_usb/: stdio_usb.cpp  stdio_usb.h
firmware/tests/mocks/: TdlChannel.cpp  TdlChannel.h  TdlRules.cpp  TdlRules.h
libs/: conf_clock.h  main.h
libs/DS3232SN/: DS3232SN.cpp  DS3232SN_defs.h
libs/TimerDescriptionLanguage/: TdlAction.cpp  TdlAction.h  TdlActivator.h  TdlChannel.h  TdlEvents.cpp  TdlEvents.h  TdlRule.cpp  TdlRuleRunner.cpp  TdlRules.cpp  TdlRules.h
libs/datetime/: DateTime.cpp  Interval.cpp  Period.cpp  PeriodField.h  PeriodInterval.h
libs/eeprom_driver/: eeprom_driver.h
libs/exception/: CException.h  CExceptionConfig.h  ExceptionValues.h
libs/hal/: Pin.cpp  i2c.c
libs/memory/: CppNewDeleteOps.h
libs/min/: encode_decode.c  encode_decode.h  (+6 more)
tests/: CMakeLists.txt  gtest.cpp
tests/TDL_tests/: CMakeLists.txt  channels_tests.cpp  rules_tests.cpp  tdl_action_decompile_tests.cpp  tdl_action_tests.cpp  tdl_activator_tests.cpp  tdl_channel_tests.cpp
tests/basic_tests/: CMakeLists.txt  basic_check.cpp
tests/datetime_tests/: CMakeLists.txt  datetime_basic.cpp  datetime_tests.cpp  interval_tests.cpp  period_decompile_tests.cpp  period_interval_decompile_tests.cpp  period_interval_tests.cpp  period_tests.cpp
tests/min_tests/: CMakeLists.txt  encode_decode_tests.cpp
tests/mocks/: DateTimeSimpleMock.h  NvmDriverMock.cpp  NvmDriverMock.h  NvmRuleManagerMock.cpp  NvmRuleManagerMock.h  PinMock.cpp  PinMock.h  RuleLoaderMock.h  RuleWriterMock.cpp  RuleWriterMock.h  SimplePinMock.h  TdlActionMock.h  TdlChannelMock.cpp  TdlChannelMock.h  TdlEventsMock.cpp  TdlEventsMock.h  TdlRuleMock.cpp  TdlRuleMock.h  TdlRulesMock.cpp  TdlRulesMock.h  delayMock.cpp  delayMock.h  time_test.h
tests/mocks/avr/: mockio.h  pgmspace.h
tests/mocks/time_test/: CMakeLists.txt  asc_store.c  asctime.c  asctime_r.c  ctime.c  ctime_r.c  daylight_seconds.c  difftime.c  dst_pointer.c  equation_of_time.c  fatfs_time.c  gm_sidereal.c  gmtime.c  gmtime_r.c  isLeap.c  iso_week_date.c  iso_week_date_r.c  isotime.c  isotime_r.c  lm_sidereal.c  localtime.c  localtime_r.c  mk_gmtime.c  mktime.c  month_length.c  moon_phase.c  set_dst.c  set_position.c  set_system_time.c  set_zone.c  solar_declination.c  solar_noon.c  strftime.c  sun_rise.c  sun_set.c  system_time.c  time.c  tm_store.c  utc_offset.c  week_of_month.c  (+1 more)
tests/nvm_rule_manager_tests/: CMakeLists.txt  nvm_rule_manager_tests.cpp
tests/rule_runner_tests/: CMakeLists.txt  rule_runner_tests.cpp
tests/rule_writer_rule_tests/: CMakeLists.txt  rule_loader_tests.cpp
tests/simplib_tests/: CMakeLists.txt  array_tests.cpp
tests/tdl_rule_tests/: CMakeLists.txt  rule_tests.cpp
(+20 files in other folders)
